--- a/css/less/custom/_variables.less
+++ b/css/less/custom/_variables.less
@@ -60,14 +60,14 @@
 @baseBorderRadius: 2px;
 
 // Typography
-@smallestFont:			0.55rem;
-@smallerFont:			0.7rem;
-@smallFont:				0.8rem;
-@regularFont:			1rem;
-@largeFont:				1.7rem;
-@largerFont:			1.9rem;
-@largestFont:			2.7rem;
-@heroFont:				3.3rem;
+@smallestFont:			0.55em;
+@smallerFont:			0.7em;
+@smallFont:				0.8em;
+@regularFont:			1em;
+@largeFont:				1.7em;
+@largerFont:			1.9em;
+@largestFont:			2.7em;
+@heroFont:				3.3em;
 
 @baseFontFamily:        "SourceSansPro-Regular", Helvetica, Arial;
 @baseFontSize:          22px;
