--- a/css/less/page/about.less
+++ b/css/less/page/about.less
@@ -18,7 +18,7 @@
 	.about-intro{ margin-bottom: @vSpace/2;
 		.intro-text{ display: block; font-size: @regularFont;}
 	}
-	.inspiration-list{ margin: 0 0 @vSpace; text-align: left;
+	.inspiration-list{ margin: 0 0 @vSpace;
 		li{ display: inline-block; font-size: @smallestFont; letter-spacing: 2px; line-height: 120%; margin: 0 -4px 0 0; text-transform: uppercase; vertical-align: top; text-align: center; width: 10%; min-width: 60px;min-height: 132px;
 			img{ .border-radius(100px); .box-shadow(0 0 0 3px @bgcolor,0 0 0 4px @grayLighter;); display: block; margin: 4px auto @margin/2; .transition(all @anim ease); .square(66px); }
 			a{ color: @stColor; display: block; height: 88px; .transition(all @anim ease);}
