--- a/css/less/page/_basic.less
+++ b/css/less/page/_basic.less
@@ -49,7 +49,9 @@ img{ text-decoration: none; }
         .btn-contact{ display: block; margin: @margin/4 0;}
     }
 }
-.copy{ background: @white; display: block; padding: @vSpace/2; text-align: center;}
+.copy{ background: @white; display: block; padding: @vSpace/2; text-align: center;
+	@media (max-width: @mobile){ font-size: 0.8rem;}
+}
 
 
 /* SNIPPETS ---------------------------- */
